# noct

./: .clangd  .gitignore  CMakeLists.txt  README.md  generate.sh  run.sh
src/: Main.cpp  script.noct
src/noct/: Context.cpp  Context.h  Environment.cpp  Environment.h  Helpers.cpp  Helpers.h  Keywords.h  Logger.h  Run.cpp  Run.h  RunResult.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h
src/noct/exceptions/: BreakException.h  RetrunException.h  ReturnException.h  RuntimeException.h
src/noct/interpreter/: Interpreter.cpp  Interpreter.h
src/noct/lexer/: Keywords.h  Lexer.cpp  Lexer.h  NoctObject.h  Token.cpp  Token.h  TokenType.h
src/noct/module/: Module.cpp  Module.h
src/noct/parser/: Binary.h  Expression.h  Grouping.h  Interpreter.cpp  Interpreter.h  Literal.h  Parser.cpp  Parser.h  PrintVisitor.h  Ternary.h  Unary.h  Visitor.h
src/noct/parser/expression/: Assign.h  Binary.h  BoundMethod.cpp  BoundMethod.h  Call.h  ClassCallable.cpp  ClassCallable.h  ClassInstance.h  ClassInstanceFwd.h  ClassValue.h  Expression.h  ExpressionDef.h  ExpressionFwd.h  FunctionValue.cpp  FunctionValue.h  FunctionValueFactory.h  FunctionValueFwd.h  Grouping.h  ICallable.h  ICallableFwd.h  Lambda.h  Literal.h  LiteralBoolifier.h  LiteralNummifier.h  (+9 more)
src/noct/resolver/: Resolver.cpp  Resolver.h
src/noct/scanner/: Keywords.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h
tests/: Arithmetic.cpp  ClassesAndInstances.cpp  Closures.cpp  Functions.cpp  LogicAndControlFlow.cpp  RuntimeErrors.cpp  SemanticErrors.cpp  SyntaxErrors.cpp  ValidPrograms.cpp  VariablesAndScope.cpp
(+26 files in other folders)
